--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -1,9 +1,7 @@
 ﻿@page "/search"
 @inherits PageComponentBase
 
-<MAppBar App
-         ElevateOnScroll
-         ScrollTarget="#scrolling-search">
+<MAppBar App Elevation="0">
     <MButton Icon OnClick="NavigateToBack">
         <MIcon>mdi-arrow-left</MIcon>
     </MButton>
