--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/about"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Mine.About"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Mine.About"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
