--- a/SwashbucklerDiary/Pages/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/PermissionPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/permission"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Safe.Permission"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Setting.Safe.Permission"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
