--- a/SwashbucklerDiary/Pages/PrivacyLibraryPage.razor
+++ b/SwashbucklerDiary/Pages/PrivacyLibraryPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/privacyLibrary"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Safe.PrivacyLibrary"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Setting.Safe.PrivacyLibrary"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
