--- a/SwashbucklerDiary/Pages/PrivacyPolicyPage.razor
+++ b/SwashbucklerDiary/Pages/PrivacyPolicyPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/privacy-policy"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Privacy"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("About.Privacy"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
