--- a/SwashbucklerDiary/Pages/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/SettingPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/setting"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Mine.Settings"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Mine.Settings"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
