--- a/SwashbucklerDiary/Pages/UserPage.razor
+++ b/SwashbucklerDiary/Pages/UserPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/user"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("User.Title"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("User.Title"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
