--- a/SwashbucklerDiary/Pages/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/LocationPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/location"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Location.Location"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Setting.Location.Location"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
