--- a/SwashbucklerDiary/Pages/RelatedOSPPage.razor
+++ b/SwashbucklerDiary/Pages/RelatedOSPPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/relatedOSP"
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Related"))"
-          OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("About.Related"))" OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
