--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -30,7 +30,10 @@
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
-                            Placeholder="@(I18n.T("Please input a password"))">
+                            Placeholder="@(I18n.T("Please input a password"))"
+                            AppendIcon="@(showPassword1 ? "mdi-eye" : "mdi-eye-off")"
+                            Type="@(showPassword1 ? "text" : "password")"
+                            OnAppendClick="() => showPassword1 = !showPassword1">
                 </MTextField>
                 <MTextField @bind-Value="model.PasswordConfirmation"
                             Dense
@@ -38,7 +41,10 @@
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
-                            Placeholder="@(I18n.T("Please enter the password again"))">
+                            Placeholder="@(I18n.T("Please enter the password again"))"
+                            AppendIcon="@(showPassword2 ? "mdi-eye" : "mdi-eye-off")"
+                            Type="@(showPassword2 ? "text" : "password")"
+                            OnAppendClick="() => showPassword2 = !showPassword2">
                 </MTextField>
 
             </MCardText>
