--- a/SwashbucklerDiary/Pages/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/SettingPage.razor
@@ -174,6 +174,7 @@
              Title="@(I18n.T("Setting.Safe.ValidatePassword"))"
              Placeholder="@(I18n.T("Please input a password"))"
              MaxLength="20"
+             Password="true"
              OnOK="InputPassword"
              OKText="@(I18n.T("Share.OK"))">
 </InputDialog>
